--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,10 +2,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Service desk log in - GOV.UK
+  DPT Prototypes Index
 {% endblock %}
 
 {% block content %}
+
 
 <div class="govuk-width-container">
 
@@ -13,51 +14,23 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-      <h1 class="govuk-heading-xl">
-        COVID-19 Testing Admin Portal
-      </h1>
+      <h1 class="govuk-heading-l">DPT prototypes</h1>
+        
+
+      <h2 class="govuk-heading-m">
+        CTAP journey
+      </h2>
+      <p><a href="/CTAP-index.html">CTAP login</a></p>
+
+      <div class="govuk-!-padding-bottom-9"></div>
     
-      <div class="govuk-grid-row">
-          <div class="govuk-grid-column-one-half govuk-grid-column-one-third-from-desktop">
-            {% from "govuk/components/input/macro.njk" import govukInput %}
-            {{ govukInput({
-              label: {
-                text: "Email address"
-              },
-              id: "email-address",
-              name: "email-address"
-            }) }}
-          </div>
-        </div>
+      <h3 class="govuk-heading-s">Code debug snippet</h3>
+      <p>This is a good snippet for debugging your code. The snippet will display data that’s been passed by the browser. Both the id and value are displayed. It can help you spot errors in your code.</p>
+      <p>
+        {{ data | dump }}
+       </p>
 
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-one-half govuk-grid-column-one-third-from-desktop">
-          {% from "govuk/components/input/macro.njk" import govukInput %}
-          {{ govukInput({
-            label: {
-              text: "Password"
-            },
-            id: "password",
-            name: "password"
-          }) }}
-        </div>
-      </div>
 
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-one-half govuk-grid-column-one-third-from-desktop">
-          <p class="govuk-body"><a href="#" class="govuk-link">I have forgotten my password</a></p>
-        </div>
-      </div>
-
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-one-half govuk-grid-column-one-third-from-desktop">
-          {% from "govuk/components/button/macro.njk" import govukButton %}
-
-          {{ govukButton({
-            text: "Login"
-          }) }}
-        </div>
-      </div>
 
      </div>
   </div>
