--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -3,7 +3,7 @@ $govuk-global-styles: true;
 $govuk-new-link-styles: true;
 
 // We can't mount GOV.UK Frontend's assets at root as it's done automatically by the extensions framework.
-$govuk-assets-path: '/govuk/assets/';
+$govuk-assets-path: "/govuk/assets/";
 
 // Import GOV.UK Frontend and any extension styles if extensions have been configured
 @import ".tmp/sass/extensions";
@@ -19,3 +19,12 @@ $govuk-assets-path: '/govuk/assets/';
 @import "patterns/task-list";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+
+.custom-card {
+  background: #f3f2f1;
+  border-bottom: 3px solid #1d70b8;
+}
+
+.custom-card__heading {
+  color: #1d70b8;
+}
