--- a/app/views/CTAP-login.html
+++ b/app/views/CTAP-login.html
@@ -1,12 +1,19 @@
-{% extends "layout.html" %} {% block pageTitle %} Service desk log in - GOV.UK
-{% endblock %} {% block content %} {% from
-"govuk/components/skip-link/macro.njk" import govukSkipLink %} {{
-govukSkipLink({ text: "Skip to main content", href: "#content" }) }}
+{% extends "layout.html" %} 
 
-<div class="govuk-width-container">
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl">COVID-19 Testing Admin Portal</h1>
+{% block pageTitle %} Service desk log in - GOV.UK {% endblock %} 
+
+{% block header %}
+  {{ govukHeader({ serviceName: "COVID-19" }) }}
+{% endblock %}
+
+{% block content %} 
+
+{% from "govuk/components/skip-link/macro.njk" import govukSkipLink %} {{ govukSkipLink({ text: "Skip to main content", href: "#content" }) }}
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    
+    <h1 class="govuk-heading-xl">COVID-19 Testing Admin Portal</h1>
 
       <div class="govuk-grid-row">
         <div
@@ -18,44 +25,40 @@ govukSkipLink({ text: "Skip to main content", href: "#content" }) }}
         </div>
       </div>
 
-      <div class="govuk-grid-row">
-        <div
-          class="govuk-grid-column-one-half govuk-grid-column-one-third-from-desktop"
-        >
-          {% from "govuk/components/input/macro.njk" import govukInput %} {{
-          govukInput({ label: { text: "Password" }, id: "password", name:
-          "password", type: "password" }) }}
-        </div>
-      </div>
-
-      <div class="govuk-grid-row">
-        <div
-          class="govuk-grid-column-one-half govuk-grid-column-one-third-from-desktop"
-        >
-          <p class="govuk-body govuk-!-padding-bottom-2">
-            <a href="#" class="govuk-link">I have forgotten my password</a>
-          </p>
-        </div>
-      </div>
-
-      <div class="govuk-grid-row">
-        <div
-          class="govuk-grid-column-one-half govuk-grid-column-one-third-from-desktop"
-        >
-          <form action="/CTAP-home" method="post" novalidate>
-            <input type="hidden" name="answers-checked" value="true" />
-
-            <button
-              type="submit"
-              class="govuk-button"
-              data-module="govuk-button"
-            >
-              Login
-            </button>
-          </form>
-        </div>
+    <div class="govuk-grid-row">
+      <div
+        class="govuk-grid-column-one-half govuk-grid-column-one-third-from-desktop"
+      >
+        {% from "govuk/components/input/macro.njk" import govukInput %} {{
+        govukInput({ label: { text: "Password" }, id: "password", name:
+        "password", type: "password" }) }}
       </div>
     </div>
+
+    <div class="govuk-grid-row">
+      <div
+        class="govuk-grid-column-one-half govuk-grid-column-one-third-from-desktop"
+      >
+        <p class="govuk-body govuk-!-padding-bottom-2">
+          <a href="#" class="govuk-link">I have forgotten my password</a>
+        </p>
+      </div>
+    </div>
+
+    <div class="govuk-grid-row">
+      <div
+        class="govuk-grid-column-one-half govuk-grid-column-one-third-from-desktop"
+      >
+        
+        <input type="hidden" name="answers-checked" value="true" />
+
+        <a href="/CTAP-home" class="govuk-button">
+            Login
+        </a>
+
+      </div>
+    </div>
+
   </div>
 </div>
 
