--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -36,7 +36,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-  GOV.UK Prototype Kit
+  DPT prototypes
 {% endblock %}
 
 {% block header %}
@@ -59,6 +59,10 @@
           {
             href: "https://govuk-prototype-kit.herokuapp.com/",
             text: "GOV.UK Prototype Kit " + releaseVersion
+          },
+          {
+            href: "/docs",
+            text: "Docs"
           },
           {
             href: "/prototype-admin/clear-data",
