--- a/app/views/CTAP-identity-verification.html
+++ b/app/views/CTAP-identity-verification.html
@@ -12,6 +12,8 @@
 
 {% block content %}
 
+<p class="govuk-body"><strong>Sample barcode:</strong> LOK76543212 &nbsp; &nbsp; &nbsp;<a href="/CTAP-barcode-lookup">Change</a> </p>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
 
