--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,7 @@
   <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">Prototype index</h1>
 
-      <p class="govuk-body-l">These prototypes are work in progress. </p><p>Please continue to use the <a href="https://app.zeplin.io/project/5e9f07670480db7de98d0d96">designs on Zeplin</a> unless you have specifically been given a link to use.</p>
+      <p class="govuk-body-l">These prototypes are work in progress and are only temporarily hosted here. </p><p>Please continue to use the <a href="https://app.zeplin.io/project/5e9f07670480db7de98d0d96">designs on Zeplin</a> unless you have specifically been given a link to use.</p>
 
       <h2 class="govuk-heading-m govuk-!-margin-top-9">Covid-19 Testing Admin Portal (CTAP) journey</h2>
 
