ID&V heading left

--- a/app/views/CTAP-identity-verification.html
+++ b/app/views/CTAP-identity-verification.html
@@ -18,7 +18,7 @@
   <div class="govuk-grid-column-three-quarters">
 
   <div class="panel">
-    <h2 class="govuk-heading-l white-text govuk-!-text-align-centre">
+    <h2 class="govuk-heading-l white-text">
       Before you continue
     </h2>
     <p class="govuk-!-margin-bottom-3  white-text">
