--- a/app/views/CTAP-identity-verification.html
+++ b/app/views/CTAP-identity-verification.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-<p class="govuk-body"><strong>Sample barcode:</strong> LOK76543212 &nbsp; &nbsp; &nbsp;<a href="/CTAP-barcode-lookup">Change</a> </p>
+<p class="govuk-body"><strong>Sample barcode:</strong> LOK76543212 &nbsp; &nbsp; &nbsp;<a href="/CTAP-barcode-lookup" aria-label="change the sample barcode">Change</a> </p>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
@@ -47,7 +47,7 @@
       </tbody>
     </table>
 
-    <p class="govuk-!-margin-bottom-3  white-text">
+    <p class="govuk-!-margin-bottom-5  white-text">
     If any of these answers are incorrect, don't proceed.
     </p>
 
