--- a/app/views/CTAP-identity-verification.html
+++ b/app/views/CTAP-identity-verification.html
@@ -76,7 +76,7 @@ endblock %} {% block beforeContent %}
           Continue
         </button>
         <a
-          href="/CTAP-barcode-lookup"
+          href="/CTAP-barcode-lookup-blank"
           class="govuk-link govuk-link--inverse govuk-!-margin-left-9"
           >Return to barcode search</a
         >
