--- a/app/views/CTAP-test-information.html
+++ b/app/views/CTAP-test-information.html
@@ -1,22 +1,27 @@
-{% extends "layout.html" %} 
-
-{% block pageTitle %} Test verification - GOV.UK {% endblock %} 
-
-{% block header %}
-  {{ govukHeader({ serviceName: "COVID-19" }) }}
-{% endblock %}
-
-{% block beforeContent %}
-  <a class="govuk-back-link" href="javascript:window.history.back()">Back</a>
-{% endblock %}
-
-{% block content %}
+{% extends "layout.html" %} {% block pageTitle %} Test verification - GOV.UK {%
+endblock %} {% block header %} {{ govukHeader({ serviceName: "COVID-19" }) }} {%
+endblock %} {% block beforeContent %}
+<a class="govuk-back-link" href="javascript:window.history.back()">Back</a>
+{% endblock %} {% block content %}
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
+      Information about this test sample
+    </h1>
 
-    <h1 class="govuk-heading-xl">Information about this test sample</h1>
+    <p class="govuk-body">
+      <strong>Sample barcode:</strong> {{ data["sample-barcode"] }} &nbsp;
+      &nbsp; &nbsp;<a
+        href="/CTAP-barcode-lookup"
+        aria-label="change the sample barcode"
+        >Change</a
+      >
+    </p>
 
+    <p class="govuk-body"><strong>Test status:</strong> Completed</p>
+
+    <h2 class="govuk-heading-m">Sample results</h2>
   </div>
 </div>
 
