--- a/app/views/CTAP-identity-verification-option2.html
+++ b/app/views/CTAP-identity-verification-option2.html
@@ -4,17 +4,23 @@ endblock %} {% block beforeContent %}
 <a class="govuk-back-link" href="javascript:window.history.back()">Back</a>
 {% endblock %} {% block content %}
 
-<p class="govuk-body">
-  <strong>Sample barcode:</strong> {{ data["sample-barcode"] }} &nbsp; &nbsp;
-  &nbsp;<a href="/CTAP-barcode-lookup" aria-label="change the sample barcode"
-    >Change</a
-  >
-</p>
-
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
     <div class="panel">
-      <h2 class="govuk-heading-l white-text">Before you continue</h2>
+      <p class="govuk-body white-text">
+        <strong>Sample barcode:</strong> {{ data["sample-barcode"] }} &nbsp;
+        &nbsp; &nbsp;<a
+          href="/CTAP-barcode-lookup"
+          aria-label="change the sample barcode"
+          class="govuk-link--inverse"
+          >Change</a
+        >
+      </p>
+      <h1
+        class="govuk-heading-xl white-text govuk-!-margin-top-7 govuk-!-margin-bottom-5"
+      >
+        Before you continue
+      </h1>
       <p class="govuk-!-margin-bottom-3 white-text">
         You will need to validate who you are speaking to. You will need to ask
         them for:
