--- a/app/views/CTAP-test-information.html
+++ b/app/views/CTAP-test-information.html
@@ -12,16 +12,52 @@ endblock %} {% block beforeContent %}
 
     <p class="govuk-body">
       <strong>Sample barcode:</strong> {{ data["sample-barcode"] }} &nbsp;
-      &nbsp; &nbsp;<a
-        href="/CTAP-barcode-lookup"
-        aria-label="change the sample barcode"
+      &nbsp;
+      <a href="/CTAP-barcode-lookup" aria-label="change the sample barcode"
         >Change</a
       >
     </p>
 
     <p class="govuk-body"><strong>Test status:</strong> Completed</p>
+  </div>
+</div>
 
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    {# - - - - sample results - - - - #}
     <h2 class="govuk-heading-m">Sample results</h2>
+    <dl class="govuk-summary-list">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key sample-summary-table">
+          Test result
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <strong class="govuk-tag govuk-tag--red"> Positive </strong>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Uploaded on</dt>
+        <dd class="govuk-summary-list__value">08 September 2021, 13:16</dd>
+      </div>
+    </dl>
+    {# - - - - sample status - - - - #}
+    <h2 class="govuk-heading-m govuk-!-margin-top-9">Sample status</h2>
+    <dl class="govuk-summary-list">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key sample-summary-table">
+          Latest sample status
+        </dt>
+        <dd class="govuk-summary-list__value">Result sent by SMS</dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Latest data sample status</dt>
+        <dd class="govuk-summary-list__value">08 September 2021, 13:16</dd>
+      </div>
+    </dl>
+    <p class="govuk-body">
+      <a href="#">View test sample progress</a>
+    </p>
+    {# - - - - personal details - - - - #}
   </div>
 </div>
 
