--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,7 +4,7 @@ endblock %} {% block header %} {{ govukHeader({ serviceName: "DPT Prototypes" })
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-l">Prototype index</h1>
+    <h1 class="govuk-heading-l">DPT Prototype index</h1>
 
     <p class="govuk-body-l">
       These prototypes are work in progress and are only temporarily hosted
@@ -19,7 +19,7 @@ endblock %} {% block header %} {{ govukHeader({ serviceName: "DPT Prototypes" })
     </p>
 
     <h2 class="govuk-heading-m govuk-!-margin-top-9">
-      Covid-19 Testing Admin Portal (CTAP) journey
+      Covid-19 Testing Admin Portal (CTAP)
     </h2>
 
     <ul class="govuk-list govuk-list--bullet">
@@ -29,7 +29,19 @@ endblock %} {% block header %} {{ govukHeader({ serviceName: "DPT Prototypes" })
       <li>
         <a href="/CTAP-identity-verification.html">Identity verification</a>
       </li>
-      <li><a href="/CTAP-test-information.html">Test information</a></li>
+      <li>
+        <a href="/CTAP-identity-verification-option2.html"
+          >Identity verification - Option 2</a
+        >
+      </li>
+      <li>
+        <a href="/CTAP-identity-verification-option3.html"
+          >Identity verification - Option 3</a
+        >
+      </li>
+      <li>
+        <a href="/CTAP-test-information.html">Test information</a>
+      </li>
     </ul>
 
     <div class="govuk-!-padding-bottom-9"></div>
