--- a/app/views/Option1/CTAP-home.html
+++ b/app/views/Option1/CTAP-home.html
@@ -19,7 +19,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-half">
         <div class="card govuk-!-padding-4 govuk-!-margin-bottom-8">
-          <a href="/CTAP-barcode-lookup" class="govuk-link--no-underline">
+          <a href="CTAP-barcode-lookup" class="govuk-link--no-underline">
             <h2 class="govuk-heading-m card__heading">
               Look up a subject's barcode
             </h2>
@@ -37,7 +37,7 @@
       Log out if you are finished.
     </p>
 
-    <a href="/CTAP-login" class="govuk-button">Log out</a>
+    <a href="#" class="govuk-button">Log out</a>
   </div>
 </div>
 
