--- a/app/views/Option1/CTAP-test-information.html
+++ b/app/views/Option1/CTAP-test-information.html
@@ -13,7 +13,7 @@ endblock %} {% block beforeContent %}
     <p class="govuk-body">
       <strong>Sample barcode:</strong> {{ data["sample-barcode"] }} &nbsp;
       &nbsp;
-      <a href="/CTAP-barcode-lookup" aria-label="change the sample barcode"
+      <a href="CTAP-barcode-lookup" aria-label="change the sample barcode"
         >Change</a
       >
     </p>
@@ -32,7 +32,7 @@ endblock %} {% block beforeContent %}
           Test result
         </dt>
         <dd class="govuk-summary-list__value">
-          <strong class="govuk-tag govuk-tag--red"> Positive </strong>
+          <strong class="govuk-tag govuk-tag--blue"> Negative </strong>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -41,7 +41,7 @@ endblock %} {% block beforeContent %}
       </div>
     </dl>
     {# - - - - sample status - - - - #}
-    <h2 class="govuk-heading-m govuk-!-margin-top-9">Sample status</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-top-7">Sample status</h2>
     <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key sample-summary-table">
@@ -58,6 +58,39 @@ endblock %} {% block beforeContent %}
       <a href="#">View test sample progress</a>
     </p>
     {# - - - - personal details - - - - #}
+    <h2 class="govuk-heading-m govuk-!-margin-top-7">Personal details</h2>
+    <dl class="govuk-summary-list">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key sample-summary-table">First name</dt>
+        <dd class="govuk-summary-list__value">Jenny</dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Last name</dt>
+        <dd class="govuk-summary-list__value">Thorp</dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Date of birth</dt>
+        <dd class="govuk-summary-list__value">02 February 2000</dd>
+      </div>
+    </dl>
+    {# - - - - contact details - - - - #}
+    <h2 class="govuk-heading-m govuk-!-margin-top-7">Contact details</h2>
+    <dl class="govuk-summary-list">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key sample-summary-table">
+          Mobile number
+        </dt>
+        <dd class="govuk-summary-list__value">+447920417178</dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Landline number</dt>
+        <dd class="govuk-summary-list__value">-</dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Email address</dt>
+        <dd class="govuk-summary-list__value">-</dd>
+      </div>
+    </dl>
   </div>
 </div>
 
